tests/fixtures/pass/len_builtin_parity.walrus
println(len({"a": 1, "b": 2}));
println(len([]));
println(len(""));
