tests/fixtures/fail/dict_missing_key_vm_edge.walrus
let d = {"a": 1};
println(d["b"]);
